feat:seed db, tambah tb user, ui

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,9 @@
 *{
-    margin: 0px;
-    padding: 0px;
+    padding: 0;
+    margin: 0;
+    text-decoration: none;
+}
 
+.card-body>*{
+    text-decoration: none;
 }
